--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "hprose/hprose-swoole": "dev-master",
         "corneltek/getoptionkit": "1.2.*",
-        "vlucas/phpdotenv": "~2.2"
+        "vlucas/phpdotenv": "~2.2",
+        "mongodb/mongodb": "^1.4"
     },
     "autoload": {
         "psr-4": {
